# exexml

./: CMakeLists.txt  README.md  benchmark.txt  exejson  exexml  exeyaml.h  go  hypefactory.h  makefile  test.sh  testunit.cpp  testxml.sh  testyaml.sh  tools.h
include/: exexml.h  exeyaml.h
src/: CMakeLists.txt  LICENSE  go
src/include/: CMakeLists.txt  exejson.h  exexml.h  exeyaml.h
src/ut/: CMakeLists.txt  benchmark.bash  example.json  hypefactory.h  makefile  myconfig.xml  oc.json  test.sh  testunit.cpp  textslicer.cpp  ticker.json
ut/: testunit.cpp  tools.h
